# docstrfmt

./: .pre-commit-config.yaml  .pre-commit-hooks.yaml  AUTHORS.rst  CHANGES.rst  CONTRIBUTING.rst  README.rst  pre_push.py  pyproject.toml  sample.rst  setup.py
.github/workflows/: ci.yaml  pre-commit_autoupdate.yml  prepare_release.yml  pypi.yml  tag_release.yml
docs/: conf.py
docstrfmt/: __init__.py  __main__.py  const.py  debug.py  docstrfmt.py  exceptions.py  main.py  rst_extras.py  server.py  util.py
tests/: __init__.py  conftest.py  test_docstrfmt.py  test_main.py  test_server.py
tests/test_files/: py_file.py  pyproject-header-newline.toml  pyproject-line-length_black+docstrfmt.toml  pyproject-line-length_black.toml  pyproject-line-length_docstrfmt.toml  pyproject-line-length_none.toml  pyproject-section-adornments.toml  pyproject-section-adornments_no_overline.toml  pyproject.toml  test_file.rst  test_file.txt
tests/test_files/docs/: conf.py
tests/test_files/error_files/: bad_pyproject.toml  py_file_error_bad_codeblock.py  py_file_error_doctest_parse_error.py  py_file_error_duplicate_docstring.py  py_file_error_duplicate_returns.py  py_file_error_duplicate_types.py  py_file_error_empty_doctest_block.py  py_file_error_empty_returns.py  py_file_error_invalid_rst.py  py_file_error_multiline_types.py  py_file_type_field_removal.py  test_invalid_rst_error.rst  test_invalid_rst_severe.rst  test_invalid_sphinx_metadata.rst  test_invalid_table.rst
tools/: bump_version.py  extract_log_entry.py  set_version.py
