[build-system]
build-backend = "flit_core.buildapi"
requires = ["flit_core >=3.4,<4"]

[dependency-groups]
dev = [
  "packaging",
  {include-group = "lint"},
  {include-group = "test"}
]
lint = [
  "pre-commit",
  "pyright>=1.1.406",
  "ruff>=0.0.292"
]
test = [
  "aiohttp",
  "pytest",
  "pytest-aiohttp",
  "tox-uv>=1.22.1"
]
ci = [
  "coveralls"
]

[project]
authors = [{name = "Joel Payne", email = "lilspazjoekp@gmail.com"}]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Programming Language :: Python",
  "Topic :: Documentation",
  "Topic :: Documentation :: Sphinx",
  "Topic :: Software Development :: Documentation",
  "Topic :: Utilities"
]
dependencies = [
  "black>=24",
  "click>=8",
  "coverage>=7.11.0",
  "docutils>=0.21",
  "docutils-stubs==0.0.22",
  "libcst>=1",
  "platformdirs>=4",
  "roman",
  "sphinx>=7",
  "tabulate>=0.9",
  "tomli>=0.10;python_version<'3.11'",
  "types-docutils==0.22.3.20251115"
]
dynamic = ["version", "description"]
keywords = ["black", "docutils", "autoformatter", "formatter", "lint", "restructuredtext", "rst", "sphinx"]
license = {file = "LICENSE.txt"}
maintainers = [{name = "Joel Payne", email = "lilspazjoekp@gmail.com"}]
name = "docstrfmt"
readme = "README.rst"
requires-python = ">=3.10"

[project.optional-dependencies]
d = [
  "aiohttp"
]

[project.scripts]
docstrfmt = "docstrfmt.main:main"
docstrfmtd = "docstrfmt.server:main [d]"

[project.urls]
"Issue Tracker" = "https://github.com/LilSpazJoekp/docstrfmt/issues"
"Source Code" = "https://github.com/LilSpazJoekp/docstrfmt"

[tool.black]
extend_exclude = '/(\.venv.*)/'
line-length = 88

[tool.coverage.report]
exclude_also = [
  "if __name__ == __main__.:",
  "def __repr__",
  "def __str__",
  "raise NotImplementedError",
  "raise NotImplemented",
  "except ImportError",
  "except ModuleNotFoundError",
  "if TYPE_CHECKING:"
]
omit = [
  "tests/*",
  "docstrfmt/__main__.py"
]

[tool.docstrfmt]
files = ["docstrfmt", "tests"]
extend_exclude = ["tests/test_files/error_files/*"]

[tool.isort]
profile = "black"

[tool.pyright]
include = ["docstrfmt"]
reportPrivateImportUsage = false
reportMissingImports = false
executionEnvironments = [
  {root = "docstrfmt/docstrfmt.py", reportAttributeAccessIssue = "none"}
]

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"
asyncio_mode = "auto"
filterwarnings = "ignore::DeprecationWarning"
testpaths = "tests"

[tool.ruff]
include = [
  "docstrfmt/**/*.py"
]
target-version = "py310"

[tool.ruff.lint]
ignore = [
  "A002", # shadowing built-in
  "ANN202", # missing return type for private method
  "ANN401", # typing.Any usage
  "ARG001", # unused function argument
  "ARG002", # unused method argument
  "ASYNC109", # Async function definition with a `timeout` parameter
  "D203", # 1 blank line required before class docstring
  "D213", # Multi-line docstring summary should start at the second line
  "E501", # line-length
  "FIX002", # Line contains TODO
  "G004", # Logging statement uses string formatting
  "N801", # class names should use CapWords convention
  "N802", # function name should be lowercase
  "N818", # exception name should be named with an Error suffix
  "PLR0912", # too many branches
  "PLR0913", # too many arguments
  "PLR0915", # too many statements
  "PLR2004", # Magic value used in comparison,
  "S101", # use of assert
  "TD003" # Missing issue link on the line following this TODO
]
select = [
  "A", # flake8-builtins
  "ANN", # flake8-annotations
  "ASYNC", # flake8-async
  "ARG", # flake8-unused-arguments
  "B", # flake8-bugbear
  "BLE", # flake8-blind-except
  "C4", # flake8-comprehensions
  "D", # pydocstyle
  "DTZ", # flake8-datetimez
  "E", # pycodestyle errors
  "EM", # flake8-errmsg
  "ERA", # eradicate
  "EXE", # flake8-executable
  "F", # pyflakes
  "FA", # flake8-future-annotations
  "FIX", # flake8-fix me
  "FLY", # flynt
  "G", # flake8-logging-format
  "I", # isort
  "INP", # flake8-no-pep420
  "ISC", # flake8-implicit-str-concat
  "N", # pep8-naming
  "PIE", # flake8-pie
  "PGH", # pygrep-hooks
  "PL", # Pylint
  "PT", # flake8-pytest-style
  "PYI", # flake8-pyi
  "Q", # flake8-quotes
  "RET", # flake8-return
  "RSE", # flake8-raise
  "S", # bandit
  "SIM", # flake8-simplify
  "T10", # flake8-debugger
  "T20", # flake8-print
  "TCH", # flake8-type-checking
  "TD", # flake8-todos
  "W", # pycodestyle warnings
  "UP" # pyupgrade
]

[tool.ruff.lint.flake8-annotations]
allow-star-arg-any = true
mypy-init-return = true
suppress-dummy-args = true
suppress-none-returning = true

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.tox]
envlist = ["py310", "py311", "py312", "py313", "py314", "pre-commit", "style"]
minversion = "4.22"

[tool.tox.env.pre-commit]
commands = [
  ["pre-commit", "run", "--all-files"]
]
description = "run pre-commit on code base"
dependency_groups = ["lint"]

[tool.tox.env.style]
commands = [
  ["ruff", "check"],
  ["ruff", "format", "--diff", "--target-version", "py310"]
]
description = "run lint check on code base"
dependency_groups = ["lint"]

[tool.tox.env.style-fix]
commands = [
  ["ruff", "check", "--fix", "{posargs}"],
  ["ruff", "format", "--target-version", "py310"]
]
description = "run lint check on code base"
dependency_groups = ["lint"]

[tool.tox.env_run_base]
commands = [
  ["pytest", "{posargs}"]
]
description = "Run test under {base_python}"
dependency_groups = ["test"]
